Updated and tidied

--- a/src/analysis.tex
+++ b/src/analysis.tex
@@ -1,13 +1,13 @@
 % -------------------------------------- Analysis ----------------------------------
 
 \section{Analysis}
-
+\label{sec:analysis}
 % Mars Benchmarks
 \input{bmars}
-
+\clearpage
 % Mars Topography
 \input{topo}
-
+\clearpage
 % Phantom
 \input{phantom}
 
