--- a/src/intro.tex
+++ b/src/intro.tex
@@ -1,5 +1,38 @@
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% Introduction %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% Introduction %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Introduction}
+This report covers the work performed at UW in Wyle Contracts xx \& xx. The work
+can be broken down into the following sections;
 
+\begin{itemize}
+  \item{CAD Interface Development}
+  \item{Workflows \& Tools}
+  \item{Benchmarking Activities}
+  \item{Analysis}
+\end{itemize}
 
+Section \ref{sec:cad_interfaces} discusses the development work that was
+performed the development of The University of Wisconsin Unified Workflow
+(\ref{sec:uwuw}) a workflow that facilities the use of DAGMC geometries,
+material definitions \& tally specifications in multiple Monte Carlo (MC) codes.
+The development of FluDAG is covered in Section \ref{sec:fludag}. Updates made
+to the DagSolid implementation of a Tessellated Solid for Geant4 can be found
+in Section \ref{sec:dagsolid}, related to DagSolid the DagGeant4 executable
+can be found in Section \ref{sec:daggeant4}.
+\\
+\\
+Section \ref{sec:workflows} discusses the workflows \& tools that were developed
+as part of this work. This includes the develpoment of the \texttt{ReadOBJ}
+method in MOAB for the reading of OBJ files, found in Section \ref{sec:readobj}.
+A tool to generate hierarchical information from OBJ like geometries was
+developed called \texttt{GenerateHierarchy} and is discussed in Section
+\ref{sec:genhi}. UW made contributions to GCR source development in the
+SRAGCodes repository and is discussed in Section \ref{sec:sragcodes}.
+\\
+\\
+In order to prove the correctness of FluDAG several benchmarks were performed
+and are discussed in Section \ref{sec:benchmarking}.
+\\
+\\
+UW also provided results for a number of different sets of analysis, these can
+be found in Section \ref{sec:analysis}.
